Fix CI configuration
- Configure `ciJvmOptions` to include `-Djava.locale.providers=CLDR,JRE` for locale-sensitive tests.
- Update `ciPostReleaseJobs` to inject `NODE_AUTH_TOKEN` environment variable into the `release-docs` job.
- Regenerate `.github/workflows/ci.yml` with the correct settings.